--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*" ,
-        "illuminate/html": "~5.0",
+        "laravelcollective/html": "5.2.*",
         "barryvdh/laravel-debugbar": "2.*",
         "sunra/php-simple-html-dom-parser": "1.5.2",
         "anhskohbo/no-captcha": "*"
