--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "intervention/image": "^2.3@dev",
         "gloudemans/shoppingcart": "^2.3",
         "google/recaptcha": "^1.1",
-        "mews/purifier": "^2.0"
+        "mews/purifier": "^2.0",
+        "google/apiclient": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
