fix bug variant

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,13 +5,12 @@
 
     RewriteEngine On
 
-    RewriteRule ^site/getframe/([a-zA-Z0-9]*)/(.*) elements/$1/$2
-    RewriteRule ^site/live/([a-zA-Z0-9]*)/(.*) elements/$1/$2
+    #RewriteRule ^site/getframe/([a-zA-Z0-9]*)/(.*) elements/$1/$2
+    #RewriteRule ^site/live/([a-zA-Z0-9]*)/(.*) elements/$1/$2
 
-    RewriteRule ^site/rpreview/([a-zA-Z0-9]*)/([a-zA-Z0-9]*)/([a-zA-Z0-9]*)(.*) elements/$3/$4
-    RewriteRule ^temple/index/([a-zA-Z0-9]*)/(.*) elements/$1/$2
-    RewriteRule ^lp([a-zA-Z0-9]*)/([a-zA-Z0-9]*)/(.*) elements/$2/$3
-
+    #RewriteRule ^site/rpreview/([a-zA-Z0-9]*)/([a-zA-Z0-9]*)/([a-zA-Z0-9]*)(.*) elements/$3/$4
+    #RewriteRule ^temple/index/([a-zA-Z0-9]*)/(.*) elements/$1/$2
+    #RewriteRule ^lp([a-zA-Z0-9]*)/([a-zA-Z0-9]*)/(.*) elements/$2/$3
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
