--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "trendylabs/shortener": "dev-master",
         "mbarwick83/shorty": "^1.0",
         "guzzlehttp/guzzle": "^6.2",
-        "swiftmailer/swiftmailer": "^5.4"
+        "swiftmailer/swiftmailer": "^5.4",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
