--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "mbarwick83/shorty": "^1.0",
         "guzzlehttp/guzzle": "^6.2",
         "swiftmailer/swiftmailer": "^5.4",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
